[package]
name = "l2opcodevalidator"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Merhej", "BonisTech me@bonis.tech"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2"
evm-disassembler = "0.2.0"
serde_json = "1.0.106"
